--- a/README
+++ b/README
@@ -4,3 +4,10 @@ ARCHIVOS DE APRENDIZAJE SOBRE NODE
 ### Core Node
 - conceptos del nucleo de node como:
   - process
+
+
+Leyendo la documentacion:
+https://hackernoon.com/19-things-i-learnt-reading-the-nodejs-docs-8a2dcc7f307f#.t0tpaaale
+
+debugeo en chrome:
+https://medium.com/@paul_irish/debugging-node-js-nightlies-with-chrome-devtools-7c4a1b95ae27#.cooco9gmc
